<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray"
    android:layout_centerVertical="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <!-- Top layout: logo, appname -->
        <LinearLayout
            android:id="@+id/topLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_inverse" />


        </LinearLayout>

        <!-- Mid layout: email, password -->
        <LinearLayout
            android:id="@+id/middleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topLayout"
            android:layout_centerHorizontal="true"
            android:layout_margin="40dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingTop="10dp"
                android:text="@string/forget_password"
                android:textColor="@color/green"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Bot layout: buttons -->
        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/middleLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">


            <Button
                android:id="@+id/bLogIn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_green_filled_rounded"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/bFacebook"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_facebook"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:textColor="@color/facebook_blue" />

            <TextView
                android:id="@+id/tvJumpToSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/jump_to_signup" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>