<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:tint="@color/background_grey" />


    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/applogo" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/bSignUp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/transparentbutton"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bLogIn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/whitebutton"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/red" />

    </LinearLayout>


</RelativeLayout>