<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="40sp" />


        <!-- Mid layout: regisztrációs mezők -->
        <LinearLayout
            android:id="@+id/middleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSignUp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <!-- Vezetéknév -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/etSurnameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/light">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    android:inputType="textPersonName"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp" />
            </android.support.design.widget.TextInputLayout>
            <!-- Keresztnév -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/etForenameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/light">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etForename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/forename"
                    android:inputType="textPersonName"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp" />
            </android.support.design.widget.TextInputLayout>
            <!-- Email -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/etEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/light">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp" />
            </android.support.design.widget.TextInputLayout>
            <!-- Jelszó -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/etPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/light">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp" />
            </android.support.design.widget.TextInputLayout>
            <!-- Jelszó újra -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/etPasswordAgainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/light">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPasswordAgain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_again"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="20dp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="10dp"
                    android:lineSpacingExtra="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/privacy_policy" />
            </LinearLayout>

        </LinearLayout>

        <!-- Bot layout: gombok -->
        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/middleLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">


            <Button
                android:id="@+id/bSignUp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/redbutton"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvJumpToLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/jump_to_login" />

        </LinearLayout>


    </RelativeLayout>
</ScrollView>